Made config work by using json